<resources>
    <string name="app_name">CoffeeMaker</string>
    <string name="ok">OK</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="warning">Aviso</string>
    <string name="error">Error</string>
    <string name="want_to_turn_on">Deseas encender la cafetera?</string>
    <string name="want_to_turn_off">Deseas apagar la cafetera?</string>
    <string name="no_data">No hay datos de la cafetera. Presione nuevamente el botón de encender.</string>
    <string name="coffee_maker_turned_on">Cafetera ya está encendida!</string>
    <string name="not_enough_water">El agua esta fria.</string>
    <string name="coffee_ready">Café listo.</string>
    <string name="coffee_maker_sleeping_1">Cafetera descansando.</string>
    <string name="bg_header">Fondo de cabecera</string>
    <string name="bg_msg">Fondo de mensaje</string>
    <string name="water_tank">Tanque de agua</string>
    <string name="left_arrow">Flecha decorativa izquierda</string>
    <string name="right_arrow">Flecha decorativa derecha</string>
    <string name="temperatura_de_agua">Temperatura de Agua</string>
    <string name="maquina_de_cafe">maquina de cafe</string>
    <string name="coffexpert_unlam">CoffeXpert UNLaM</string>
    <string name="encender_m_quina">ENCENDER MÁQUINA</string>
    <string name="slogan">La precisión que tu café merece.</string>
    <string name="azucar">Azúcar</string>
    <string name="te">Té</string>
    <string name="cafe">Café</string>
    <string name="taza_de_cafe">taza de café</string>
    <string name="ready_to_use">Listo para usar</string>
    <string name="no_tea">No hay té</string>
    <string name="no_coffee">No hay café</string>
    <string name="no_sugar">No hay azúcar</string>
    <string name="water_cold">El agua está fría</string>
    <string name="maquina_off">Máquina Apagada</string>


</resources>
