<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eveexite.coffeemaker.presentation.main.MainActivity"
    android:background="#602E1A">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".10"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".90"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_middle_guideline"
        app:layout_constraintGuide_percent=".50"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent=".05"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_msg_guideline"
        app:layout_constraintGuide_percent=".10"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_msg_guideline"
        app:layout_constraintGuide_percent=".15"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_image_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18194254" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_image_guideline"
        app:layout_constraintGuide_percent=".55"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_dashboard_guideline"
        app:layout_constraintGuide_percent=".58"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_dashboard_guideline"
        app:layout_constraintGuide_percent=".87"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_fab_guideline"
        app:layout_constraintGuide_percent=".90"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent=".95"
        android:orientation="horizontal"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="matrix"
        android:contentDescription="@string/bg_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/top_guideline"
        app:srcCompat="@drawable/bg_header"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg_msg"
        app:srcCompat="@drawable/bg_msg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_msg_guideline"/>

    <com.eveexite.coffeemaker.presentation.widget.TitleView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/vTitle"
        app:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_msg_guideline"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_image_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_image_guideline"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/taza_de_cafe"
            app:srcCompat="@drawable/coffee_cup" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_middle_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_dashboard_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_dashboard_guideline">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        </LinearLayout>

        <Switch
            android:id="@+id/switch_tea"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:checked="true"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="81dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="37dp"
            tools:ignore="MissingConstraints" />

        <Switch
            android:id="@+id/switch_coffee"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:checked="true"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="31dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/te"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="92dp"
            tools:ignore="MissingConstraints" />

        <Switch
            android:id="@+id/switch_sugar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:checked="true"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="131dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/azucar"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="139dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/right_middle_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_dashboard_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_dashboard_guideline">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontal_right_middle_guideline"
            app:layout_constraintGuide_percent=".65"
            android:orientation="horizontal"/>

        <com.eveexite.coffeemaker.presentation.widget.WaterTemperatureView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/vWaterTemperature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_right_middle_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/temperatura_de_agua"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/horizontal_right_middle_guideline"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabPower"
        app:srcCompat="@drawable/power"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_fab_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/left_arrow"
        app:srcCompat="@drawable/left_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fabPower"
        app:layout_constraintTop_toTopOf="@+id/top_fab_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/right_arrow"
        app:srcCompat="@drawable/right_arrow"
        app:layout_constraintLeft_toRightOf="@id/fabPower"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_fab_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>
